--- a/MasterPage.master
+++ b/MasterPage.master
@@ -10,23 +10,21 @@
     </title>
     <link href="Styles/StyleSheet.css" rel="stylesheet" />
     <asp:ContentPlaceHolder ID="head" runat="server">
-     
     </asp:ContentPlaceHolder>
 </head>
 <body>
-    
     <form id="form1" runat="server">
         
         <div class="wraper">
            
             <div class="menu">
                
-                
+                <asp:Image ID="Image1" runat="server" Height="101px" Width="119px"
+                 AlternateText="Image text" ImageAlign="left" ImageUrl="Styles/oldBook.gif"/>
                
              &nbsp;
                 
-                   <asp:Image ID="Image1" runat="server" Height="101px" Width="119px"
-                 AlternateText="Image text" ImageAlign="left" ImageUrl="Styles/oldBook.gif"/>
+                
                 <asp:Label ID="Label1" runat="server" Text="Old books-old friends"></asp:Label>
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
              
@@ -34,14 +32,17 @@
                 &nbsp;&nbsp;
                 <asp:Label ID="labelName" runat="server" Text="MY Name"></asp:Label>
                &nbsp;
-               
+                <asp:TextBox ID="textBoxEmail" runat="server" OnTextChanged="TextBox1_TextChanged">Email</asp:TextBox>
                 &nbsp;
-                <asp:Button ID="logBtn" runat="server" Text="Log in" OnClick="Login"/>
+                <asp:TextBox ID="textBoxPassword" runat="server" TextMode="Password">Password</asp:TextBox>
+                &nbsp;
+                <asp:Button ID="logBtn" runat="server" Text="Log in" OnClick="Button8_Click1" />
                
-              
+                <asp:LinkButton ID="LinkButton1" runat="server" ForeColor="Red" OnClick="LinkButton1_Click">CreateAccount</asp:LinkButton>
                
              &nbsp;&nbsp;&nbsp;
                 <br />
+&nbsp;<asp:CheckBox ID="checkBoxAdmin" runat="server" Text="Log in as admin" />
                
              <br />
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -90,15 +91,19 @@
 &nbsp;-
                     <asp:LinkButton ID="LinkButton6" runat="server" OnClick="LinkButton6_Click">Children</asp:LinkButton>
                     <br />
+&nbsp;<asp:LinkButton ID="linkAdministrator" runat="server" OnClick="linkAdministrator_Click">Administrator&#39;s tools</asp:LinkButton>
+                    <br />
                     <asp:LinkButton ID="linkProfile" runat="server" OnClick="linkProfile_Click">Edit profile</asp:LinkButton>
                     <br />
                     <asp:LinkButton ID="LinkButton7" runat="server" OnClick="LinkButton7_Click">Orders history</asp:LinkButton>
                     <br />
                     <asp:LinkButton ID="linckOut" runat="server" OnClick="LinkButton8_Click">CheckOut</asp:LinkButton>
                     <br />
+                    <asp:LinkButton ID="LinkButton8" runat="server" OnClick="LinkButton8_Click1">Set rate</asp:LinkButton>
+                    <br />
                     <br />
                 </div>
-                
+            
                 <div class="main">
                 <asp:ContentPlaceHolder ID="contentBody" runat="server">
                 </asp:ContentPlaceHolder>
@@ -107,14 +112,7 @@
                  <div class="sidebarRight">
                  <asp:ContentPlaceHolder ID="ContentPlaceHolderRight" runat="server">
                 </asp:ContentPlaceHolder>
-                     <div>
-                         <p>Shopping Cart
-                         <asp:table ID="cartT" runat="server" Height="30%">
-
-                         </asp:table>
-
-
-                     </div>
+                     <br />
 &nbsp;<br />
 &nbsp;<asp:AdRotator ID="AdRotator1"  KeywordFilter="Japan" runat="server" DataSourceID="XmlDataSource1" />
                      <asp:XmlDataSource ID="XmlDataSource1" runat="server"  OnTransforming="XmlDataSource1_Transforming" DataFile="~/Sample1.ads"></asp:XmlDataSource>
