--- a/Styles/StyleSheet.css
+++ b/Styles/StyleSheet.css
@@ -4,7 +4,7 @@
 }
 /*body*/
 body {
-    color: red;
+    color: black;
     font-family: Arial,Arial, Helvetica, sans-serif;
     font-size: 22px;
     height: 861px;
@@ -28,7 +28,6 @@ body {
 }
 .main {
     width:60%;
-    background:url(old.jpg);
     height:568px;
     float:left;
    
@@ -43,11 +42,11 @@ body {
 /*Menu*/
 .menu {
     width: 100%;
-    background-color: rgb(10, 110,178);
+    background-color: black;
     border-radius: 5px,5px,5px,5px;
     margin: 0px 0px 10px;
     color: rgb(243,243,243);
-    height: 206px;
+    height: 110px;
     padding: 0px;
 }
 
