--- a/Test.cshtml
+++ b/Test.cshtml
@@ -56,7 +56,7 @@
 
     conn.Close();
  var myChart = new Chart(width: 600, height: 400)
-    .AddTitle("Employees")
+    .AddTitle("Categories")
 .AddSeries(chartType: "column",
 xValue: new[] { "Thriller", "Science", "Romance", "Children" },
 yValues: new[] { countThriller,countScience, countRomance, countChildren })
