--- a/MasterPage.master
+++ b/MasterPage.master
@@ -25,7 +25,7 @@
              &nbsp;
                 
                 
-                <asp:Label ID="Label1" runat="server" Text="Old books-old friends"></asp:Label>
+                <asp:Label ID="Label1" runat="server" Text="AJID MovieStore"></asp:Label>
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
              
                 <asp:Label ID="Label2" runat="server" Text="Welcome"></asp:Label>
